@@ -640,20 +640,20 @@ public:
     ShColor3f specularColor(0.5, 0.5, 0.5);
 
     ShImage image;
-    image.loadPng(normalize_path(SHMEDIA_DIR "/textures/kd.png"));
+    image.load_PNG(normalize_path(SHMEDIA_DIR "/textures/kd.png"));
     ShTable2D<ShColor3fub> mosaicTex(image.width(), image.height());
     mosaicTex.name("Mosaic Texture");
     mosaicTex.memory(image.memory());
 
     std::string imageNames[6] = {"left", "right", "top", "bottom", "back", "front"};
     ShImage test_image;
-    test_image.loadPng(normalize_path(std::string(SHMEDIA_DIR "/envmaps/aniroom/") + imageNames[0] + ".png"));
+    test_image.load_PNG(normalize_path(std::string(SHMEDIA_DIR "/envmaps/aniroom/") + imageNames[0] + ".png"));
 
     ShTableCube<ShColor4fub> cubemap(test_image.width(), test_image.height());
     {
       for (int i = 0; i < 6; i++) {
 	ShImage image2;
-	image2.loadPng(normalize_path(std::string(SHMEDIA_DIR "/envmaps/aniroom/") + imageNames[i] + ".png"));
+	image2.load_PNG(normalize_path(std::string(SHMEDIA_DIR "/envmaps/aniroom/") + imageNames[i] + ".png"));
 	cubemap.memory(image2.memory(), static_cast<ShCubeDirection>(i));
       }
     }
